# multimap_server

./: CMakeLists.txt  README.md  package.xml
config/: cartographer_example_environment.yaml  example_environment.yaml  example_environment_2.yaml  multimap_server_config.yaml
include/multimap_server/: image_loader.h
launch/: multimap_server.launch
maps/: localization_floor_0.yaml  localization_floor_1.pgm  localization_floor_1.yaml  routes_floor_0.yaml  routes_floor_1.pgm  routes_floor_1.yaml
maps/basement/: routes.yaml
maps/cartographer_3d_map/: cartographer_multimap_test.pbstream  routes.pgm  routes.yaml
maps/floor_0/: localization.yaml
src/: image_loader.cpp  main.cpp  online_map_saver.cpp
test/: multimap_server_config.yaml
