<package>
  <name>multimap_server</name>
  <version>0.0.0</version>
  <description>The multimap_server package, based on the code of the map_server package at http://wiki.ros.org/map_server</description>

  <author>Brian Gerkey, Tony Pratkanis</author>
  <author>contradict@gmail.com</author>
  <author>Álvaro Villena</author>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bullet</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sdl</build_depend>
  <build_depend>sdl-image</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>resource-retriever</build_depend>
  <build_depend>multimap_server_msgs</build_depend>

  <run_depend>bullet</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sdl</run_depend>
  <run_depend>sdl-image</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>resource-retriever</run_depend>

  <test_depend>rospy</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
